# g

./: .coverage  .gitignore  AGENTS.md  AI Agent Instructions.md  Cargo.toml  Development Style Guide.md  Justfile  Phase 1_ Foundation & `plink` Parity.md  README.md  ROADMAP.md  cbgen_info.txt  clippy.toml  fix_test.py  fix_tests.py  flake.nix  optimization_plan.md  plan_review_request.md  pyproject.toml  run_test.py  rustfmt.toml  skills-lock.json
.agents/skills/pdf/scripts/: check_bounding_boxes.py  check_fillable_fields.py  extract_form_structure.py  fill_fillable_fields.py  fill_pdf_form_with_annotations.py
.github/workflows/: ci.yml  pr-ci.yml  science-monthly.yml
.jules/: bolt.md
.opencode/agent/: git-expert.md  git-workflow-architect.md
archive/direct_association/: README.md
archive/direct_association/regenie/src/: Data.cpp  Files.cpp  Geno.cpp  Geno.hpp  Regenie.cpp
archive/direct_association/release/: README.md  waf  wscript
archive/direct_association/release/R/package/src/: Makevars  load.cpp
archive/direct_association/release/appcontext/src/: CmdLineUIContext.cpp
archive/direct_association/release/apps/: bgenix.cpp  cat-bgen.cpp  edit-bgen.cpp
archive/direct_association/release/db/: wscript
archive/direct_association/release/doc/wiki/: bgenix.md
archive/direct_association/release/example/: count_alleles.cpp
archive/direct_association/scripts/: benchmark_jax_chunk_sweep.py  benchmark_jax_execution.py  benchmark_linear_triton.py  benchmark_logistic_fallback.py  benchmark_logistic_loop_sweep.py  evaluate_phase1.py  profile_full_chr22_detailed.py  profile_full_chr22_jax.py
archive/direct_association/src/g/: cli.py
archive/direct_association/src/g/compute/: logistic.py
archive/direct_association/src/g/io/: output.py
archive/direct_association/tests/: test_api.py  test_compute_logistic.py  test_engine.py  test_engine_builders.py  test_linear.py  test_logistic.py  test_logistic_coverage.py
archive/output_persistence/: README.md
benches/: bgen_read.rs
docs/: 01.implementation_plan.md  26-03-23-code_review.md  3d_batching.md  DREAMS_AND_IDEAS.md  NEW_ARCHITECHTURE_PROPOSAL.md  OPTIMIZATION_RESULTS.md  OUTPUT_SPOOLING_REFACTOR_PLAN.md  PHASE1_STATUS.md  PLAN_PHASE_0.md  PLAN_PHASE_1.md  PLAN_PHASE_2.md  PLAN_PHASE_2_GPU.md  PLAN_PHASE_2_RUST.md  ROADMAP.md  STYLEGUIDE.md  THE_NEW_ROADMAP.md  VISION.md  optimization_phases-28-03.md  precompilation.md  problematic.md  regenie2-linear-implementation.md  regenie2-linear-optimization-plan.md  regenie2-linear-profile-summary.md  rust-bgen-reader-implementation-plan.md
scripts/: __init__.py  benchmark.py  benchmark_bgen_reader.py  benchmark_bgen_vs_bed.py  benchmark_dataclass_vs_namedtuple.py  benchmark_gpu_only.py  benchmark_io_simple.py  benchmark_jax_chunk_sweep.py  benchmark_jax_execution.py  benchmark_linear_pallas.py  benchmark_linear_triton.py  benchmark_logistic_fallback.py  benchmark_logistic_loop_sweep.py  benchmark_numeric_modes.py  benchmark_output_modes.py  benchmark_plink_reader.py  benchmark_regenie2_linear_fresh_process.py  benchmark_regenie_comparison.py  debug_dot.py  debug_linear_ops.py  debug_triton.py  debug_triton_2d.py  evaluate_phase1.py  fetch_1kg.py  probe_jax_runtime.py  profile_full_chr22_detailed.py  profile_full_chr22_jax.py  profile_regenie2_linear_detailed.py  profile_regenie_comparison.py  run_comprehensive_benchmark.py  run_hail_baseline.py  run_hail_benchmark_suite.py  search_optimal_chunk_size.py  simulate_phenos.py  test_benchmark_output_modes.py  tune_regenie2_gpu.py
src/: bgen.rs  lib.rs  output.rs
src/g/: __init__.py  _core.pyi  api.py  cli.py  config.py  engine.py  jax_setup.py  models.py  types.py
src/g/compute/: __init__.py  linear.py  linear_triton.py  logistic.py  regenie2_binary.py  regenie2_linear.py
src/g/io/: __init__.py  bgen.py  genotype_processing.py  output.py  plink.py  prefetch.py  reader.py  regenie.py  sample.py  source.py  tabular.py
src/g/output/: __init__.py  chunked.py  manifest.py  schema.py
tests/: test_api.py  test_cli.py  test_compute_logistic.py  test_core.py  test_engine.py  test_engine_builders.py  test_engine_iterators.py  test_io_bgen.py  test_io_output.py  test_io_plink.py  test_io_prefetch.py  test_io_regenie.py  test_io_sample.py  test_io_source.py  test_jax_setup.py  test_linear.py  test_logistic.py  test_logistic_coverage.py  test_output_chunked.py  test_output_schema.py  test_phase0.py  test_phase1.py  test_plink.py  test_plink_iterators.py  test_regenie2_binary.py  test_regenie2_linear.py  test_regenie2_parity.py  test_regenie_comparison_scripts.py  test_tabular.py
