[project]
name = "g"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
    { name = "kirill denisov", email = "101817863+kirilledition@users.noreply.github.com" },
]
requires-python = ">=3.13,<3.14"
dependencies = [
    "bed-reader @ git+https://github.com/fastlmm/bed-reader.git@3466e0832c65302092ca9645750bfdb06e2d4cf2",
    "jax[cpu]>=0.9.2",
    "numpy>=2.4.3",
    "polars>=1.39.3",
]

[project.scripts]
g = "g:main"

[tool.maturin]
module-name = "g._core"
python-packages = ["g"]
python-source = "src"

[tool.uv]
cache-keys = [
    { file = "pyproject.toml" },
    { file = "src/**/*.rs" },
    { file = "Cargo.toml" },
    { file = "Cargo.lock" },
]

[dependency-groups]
dev = [
    "gputil>=1.4.0",
    "pandas>=3.0.1",
    "psutil>=7.2.2",
    "py-cpuinfo>=9.0.0",
    "pytest>=8.4.2",
    "ty>=0.0.1a19",
]
gpu = ["jax[cuda12]>=0.9.2"]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
fixable = ["ALL"]
select = [
    "F",   # Pyflakes rules
    "W",   # PyCodeStyle warnings
    "E",   # PyCodeStyle errors
    "I",   # Sort imports properly
    "UP",  # Warn if certain things can changed due to newer Python versions
    "C4",  # Catch incorrect use of comprehensions, dict, list, etc
    "FA",  # Enforce from __future__ import annotations
    "ISC", # Good use of string concatenation
    "ICN", # Use common import conventions
    "RET", # Good return practices
    "SIM", # Common simplification rules
    "TID", # Some good import practices
    "TC",  # Enforce importing certain types in a TYPE_CHECKING block
    "PTH", # Use pathlib instead of os.path
    "TD",  # Be diligent with TODO comments
    "NPY", # Some numpy-specific things
    "PD",  # Pandas-specific rules
    "N",   # Naming conventions
    "RUF", # Ruff-specific rules
    "A",   # detect shadowed builtins
    "BLE", # disallow catch-all exceptions
    "COM", # enforce trailing comma rules
    "DTZ", # require strict timezone manipulation with datetime
    "FBT", # detect boolean traps
    "D",   # docstrings
]
ignore = [
    "COM812", # enforce trailing comma rules
    "D100",   # missing docstring in public module
    "D103",   # missing docstring in public function
    "T201",   # allow print() in scripts
    "D200",   # one-line docstring should fit on one line
    "PTH123", # open() instead of Path.open()
]
