[project]
name = "g"
version = "0.1.0"
readme = "README.md"
authors = [
    { name = "kirill denisov", email = "101817863+kirilledition@users.noreply.github.com" },
]
requires-python = ">=3.13,<3.14"
dependencies = [
    "bed-reader @ git+https://github.com/fastlmm/bed-reader.git@3466e0832c65302092ca9645750bfdb06e2d4cf2",
    "bgen-reader>=4.0.8",
    "cbgen>=1.0.6",
    "jax[cpu]>=0.9.2",
    "numpy>=2.4.3",
    "polars>=1.39.3",
    "typer>=0.21.1",
]

[dependency-groups]
dev = [
    "gputil>=1.4.0",
    "pandas>=3.0.1",
    "psutil>=7.2.2",
    "py-cpuinfo>=9.0.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ty>=0.0.1a19",
]
gpu = ["jax[cuda12]>=0.9.2"]

[project.scripts]
g = "g:main"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
module-name = "g._core"
python-packages = ["g"]
python-source = "src"

[tool.uv]
cache-keys = [
    { file = "pyproject.toml" },
    { file = "src/**/*.rs" },
    { file = "Cargo.toml" },
    { file = "Cargo.lock" },
]

[tool.ruff]
line-length = 120
target-version = "py313"
# exclude = ["scripts/"]

[tool.ruff.lint]
fixable = ["ALL"]
select = [
    "F",   # Pyflakes rules
    "W",   # PyCodeStyle warnings
    "E",   # PyCodeStyle errors
    "I",   # Sort imports properly
    "UP",  # Warn if certain things can changed due to newer Python versions
    "C4",  # Catch incorrect use of comprehensions, dict, list, etc
    "FA",  # Enforce from __future__ import annotations
    "ISC", # Good use of string concatenation
    "ICN", # Use common import conventions
    "RET", # Good return practices
    "SIM", # Common simplification rules
    "TID", # Some good import practices
    "TC",  # Enforce importing certain types in a TYPE_CHECKING block
    "PTH", # Use pathlib instead of os.path
    "TD",  # Be diligent with TODO comments
    "NPY", # Some numpy-specific things
    "PD",  # Pandas-specific rules
    "N",   # Naming conventions
    "RUF", # Ruff-specific rules
    "A",   # detect shadowed builtins
    "BLE", # disallow catch-all exceptions
    "COM", # enforce trailing comma rules
    "DTZ", # require strict timezone manipulation with datetime
    "FBT", # detect boolean traps
    "D",   # docstrings
]
ignore = [
    "COM812", # enforce trailing comma rules
    "D200",   # one-line docstring should fit on one line
    "D203",   # allow blank line before class docstrings
    "D213",   # allow free-form second summary line
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "D", # docstrings
]
"scripts/*" = [
    "D",    # docstrings
    "T201", # allow print() in scripts
]

[tool.ruff.lint.flake8-import-conventions]
banned-from = ["typing", "enum", "collections", "collections.abc"]

[tool.ruff.lint.flake8-import-conventions.extend-aliases]
"jax.numpy" = "jnp"
"numpy.typing" = "npt"
"polars" = "pl"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.pytest.ini_options]
markers = [
    "phase0_data: requires local Phase 0 data or generated baseline artifacts.",
    "phase1_parity: exercises Phase 1 parity and benchmark evaluation flows against external baselines.",
]

[tool.coverage.run]
branch = true
source = ["src/g"]

[tool.coverage.report]
fail_under = 90
omit = [
    "src/g/__init__.py",
]
show_missing = true
skip_covered = false
